[gd_scene load_steps=7 format=3 uid="uid://bq4c4j2yujcwt"]

[ext_resource type="Script" uid="uid://ndrapxomkjhp" path="res://BrainVisualizer/UI/Windows/MappingEditor/WindowMappingEditor.gd" id="1_cwaox"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://BrainVisualizer/UI/GenericElements/TitleBar/TitleBar.tscn" id="2_y8w4n"]
[ext_resource type="PackedScene" uid="uid://bpc4cbet6k5h4" path="res://BrainVisualizer/UI/GenericElements/Buttons/GenomeObjectSelectorButton/GenomeObjectSelectorButton.tscn" id="3_ewhco"]
[ext_resource type="PackedScene" uid="uid://cxb6dif7pqgss" path="res://BrainVisualizer/UI/Windows/MappingEditor/generic_mapping_detail_settings.tscn" id="4_n57ep"]
[ext_resource type="PackedScene" uid="uid://c7ov4mq4cau4l" path="res://BrainVisualizer/UI/Windows/MappingEditor/MappingEditorMemoryMapping.tscn" id="4_vr6mc"]
[ext_resource type="PackedScene" uid="uid://bifi2v0y8l2bl" path="res://BrainVisualizer/UI/Windows/MappingEditor/generic_mapping_detail_settings_partial.tscn" id="6_yr7ns"]

[node name="WindowMappingEditor" type="VBoxContainer"]
offset_right = 1332.0
offset_bottom = 703.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("1_cwaox")

[node name="TitleBar" parent="." instance=ExtResource("2_y8w4n")]
layout_mode = 2
title = "Mapping Editor"

[node name="WindowPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="WindowMargin" type="MarginContainer" parent="WindowPanel"]
layout_mode = 2
theme_type_variation = &"MarginContainer_WindowBorder"

[node name="WindowInternals" type="VBoxContainer" parent="WindowPanel/WindowMargin"]
layout_mode = 2

[node name="ends" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2
alignment = 1

[node name="Source" parent="WindowPanel/WindowMargin/WindowInternals/ends" instance=ExtResource("3_ewhco")]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2

[node name="Arrow" type="TextureRect" parent="WindowPanel/WindowMargin/WindowInternals/ends"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
expand_mode = 1

[node name="Destination" parent="WindowPanel/WindowMargin/WindowInternals/ends" instance=ExtResource("3_ewhco")]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2

[node name="Invalid" type="VBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Label" type="Label" parent="WindowPanel/WindowMargin/WindowInternals/Invalid"]
layout_mode = 2
size_flags_vertical = 3
text = "Please ensure both ends of the connection are valid!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MappingEditorMemoryMapping" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("4_vr6mc")]
visible = false
layout_mode = 2

[node name="GenericMappingDetailSettings" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("4_n57ep")]
visible = false
custom_minimum_size = Vector2(1300, 0)
layout_mode = 2

[node name="GenericMappingDetailSettingsPartial" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("6_yr7ns")]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2
alignment = 2

[node name="Button" type="Button" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
theme_type_variation = &"Button_big"
text = " Set Mapping "

[connection signal="object_selected" from="WindowPanel/WindowMargin/WindowInternals/ends/Source" to="." method="_source_button_picked"]
[connection signal="object_selected" from="WindowPanel/WindowMargin/WindowInternals/ends/Destination" to="." method="_destination_button_picked"]
[connection signal="import_mapping_hint" from="WindowPanel/WindowMargin/WindowInternals/GenericMappingDetailSettingsPartial" to="." method="_import_partial_mapping"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/HBoxContainer/Button" to="." method="_user_pressed_set_mappings"]
